# rips2026-amd

./: .gitignore  BENCHMARKING.md  Makefile  README.md
CongestionFreeRouting/: DELTA_STEPPING_OPTIMIZATION_ROADMAP.md  GPU_PROFILING.md  UNIT_BFS_OPTIMIZATION_ROADMAP.md  cuGraph-roadmap.md  device_to_routing_graph.cpp  interchange_to_csr.cpp  pathfinder.cpp  pathfinder.hpp  pathfinder_benchmark.py  pathfinder_router.cpp  pathfinder_snapshot_benchmark.py  pathfinder_sssp_compare.cpp  routes_to_phys.cpp
CongestionFreeRouting/bellman_ford/: MEMORY.md  bf10.cpp  bf10.hpp  bf8.cpp  bf8.hpp  bf9.cpp  bf9.hpp
CongestionFreeRouting/delta_stepping/: delta_stepping_auto_delta.hpp  delta_stepping_hip_CSR.cpp  delta_stepping_hip_CSR.hpp
CongestionFreeRouting/interchange/: device_routing_graph.cpp  device_routing_graph.hpp  gzip_io.hpp
CongestionFreeRouting/profiling/: analyze_rocpd.py  roctx_ranges.hpp
CongestionFreeRouting/tests/: bf10_pathfinder_adapter_hip_test.cpp  bf10_vs_bf9_delta_hip_test.cpp  (+13 more)
HIP_kernel/: minplus_hip.cpp
HIP_kernel/faster_GPU_algo/ads_float_hip_gfx1151/: CMakeLists.txt  NOTICE.md  README.md  csr_graph.cpp  csr_graph.h  support.cpp  support.h
HIP_kernel/faster_GPU_algo/ads_float_hip_gfx1151/tools/: check_tiny_output.py  source_check.py
Routing/: csr_to_phys.cpp  generate_routes_txt.cpp  interchange_to_csr.cpp  pathfinder.cpp  pathfinder.hpp  pathfinder_benchmark.py  pathfinder_router.cpp  routes_to_phys.cpp
SSSP/: README.md
SSSP-new/: MEMORY.md
bellman_ford_attempts/: bucketed_bellman_ford
matrix_mult_attempts/: matrix_mult_chunked.py
(+102 files in other folders)
